@@ -7,6 +7,7 @@ Cultibox (1.1.20) precise; urgency=low
     + Ajout de la possibilité de créer un icône cultibox sur le bureau pour windows
     + Correction des zooms sur l'affichage des logs
     + Mise en place d'un temps d'attente après chaque action du calendrier si une carte SD est détectée grâce à la librairie blockUI
+    + Changement des couleurs pour le calendrier lunaire
 
 -- Yann Genevois <yann.genevois@gmail.com>  Sun May 12 15:58:22 CEST 2013
 
